--- a/templates/index.html
+++ b/templates/index.html
@@ -60,9 +60,14 @@
                     </div>
                     <div id="preview-container" class="image-preview">
                         <img id="colorized-image" src="" alt="Colorized Image">
-                        <a id="download-link" href="#" download>
-                            <div class="download-button">Download</div>
-                        </a>
+                        <div class="flex-row">
+                            <a id="refresh-link" href="#">
+                                <div class="refresh-button">Refresh</div>
+                            </a>
+                            <a id="download-link" href="#" download>
+                                <div class="download-button">Download</div>
+                            </a>
+                        </div>
                     </div>
                 </label>
                 <input id="file-input" type="file" name="image" accept="image/*" required>
