Update design by Michael.

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -33,20 +33,22 @@
     </nav>
     <main>
         <div class="box" id="box-1">
-            <img src="../static/assets/images/group-photo.png" alt="" id="group-photo">
-            <h1>COULEURS TEAM</h1>
-            <div id="socials-container">
-                <div class="social-part">
-                    <div class="social-logo" id="social-email"></div>
-                    <h2>Couleursid@gmail.com</h2>
-                </div>
-                <div class="social-part">
-                    <div class="social-logo" id="social-instagram"></div>
-                    <h2>Couleurs.id</h2>
-                </div>
-                <div class="social-part">
-                    <div class="social-logo" id="social-phone"></div>
-                    <h2>+6284967988765</h2>
+            <div id="inner-box-1">
+                <img src="../static/assets/images/group-photo.png" alt="" id="group-photo">
+                <h1>COULEURS TEAM</h1>
+                <div id="socials-container">
+                    <div class="social-part">
+                        <div class="social-logo" id="social-email"></div>
+                        <h2>Couleursid@gmail.com</h2>
+                    </div>
+                    <div class="social-part">
+                        <div class="social-logo" id="social-instagram"></div>
+                        <h2>Couleurs.id</h2>
+                    </div>
+                    <div class="social-part">
+                        <div class="social-logo" id="social-phone"></div>
+                        <h2>+6284967988765</h2>
+                    </div>
                 </div>
             </div>
         </div>
