--- a/static/css/contact-style.css
+++ b/static/css/contact-style.css
@@ -15,12 +15,24 @@
 
     position: relative;
 }
+#inner-box-1{
+    width: 42%;
+    height: 69%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    position: relative;
+    background-color: var(--white-color);
+    border-radius: 15px;
+}
 #group-photo{
-    width: 40%;
+    width: 95%;
 
     border-radius: 10px;
 
-    top: 5%;
+    top: 15px;
     position: relative;
 }
 #box-1 h1{
@@ -32,23 +44,23 @@
     align-items: center;
 
     font-family: "Inria Sans";
-    font-weight: 400;
-    font-size: 1.2rem;
+    font-weight: 800;
+    font-size: 1.3rem;
 
     position: relative;
     top: 7%;
-    background-color: var(--white-color);
-    border-radius: 15px;
 }
 #socials-container{
-    height: 30%;
-    width: 20%;
+    height: 100%;
+    width: 44%;
 
     display: flex;
     flex-direction: column;
 
     position: relative;
-    top: 8%;
+    top: 10%;
+    left: 3%;
+
 }
 .social-part{
     height: 15%;
@@ -57,6 +69,8 @@
     display: flex;
     align-items: center;
 
+    position: relative;
+    left: 2%;
 }
 .social-logo{
     height: 100%;
@@ -78,9 +92,13 @@
 }
 
 .social-part h2{
+
     font-family: "Inria Sans";
-    font-size: 1rem;
+    font-size: 1.12rem;
     font-weight: 400;
+
+    position: relative;
+    left: 1%;
 }
 
 /*darkmode*/
@@ -91,10 +109,11 @@
     background-image: none;
     background-color: var(--brown-1-color);
 }
+#inner-box-1.darkmode{
+    background-color: var(--brown-4-color);
+}
 #box-1 h1.darkmode{
     color: var(--white-color);
-    background-color: var(--brown-4-color);
-    border-radius: 15px;
 }
 .social-part h2.darkmode{
     color: var(--white-color);
