Converted into Fully RESTful API.
Convert the web app into Fully RESTful API. "app.py" is shortened only to handle the server. All endpoints regarding the colorizing AI is handled in "api/couleurs.py".

"couleurs.py" is a fully RESTful API.

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div class="box" id="box-3">
-            <form id="upload-form" action="/upload" method="post" enctype="multipart/form-data">
+            <form id="upload-form" action="/images" method="post" enctype="multipart/form-data">
                 <h1>COLORIZE YOUR IMAGE</h1>
                 <label for="file-input" class="upload-container">
                     <div id="upload-icon">
